Refactor API client interfaces and service implementations to use FrontRequest and Response DTOs for Cirugia, Paciente, Personal, and Quirofano. Enhance error handling in controllers and services. Introduce utility classes for paginated responses and update CirugiaMapper to handle date and time formatting. Add new PacienteExternoDto for external API responses.